--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,37 @@
 name: build
 on: [pull_request, push]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+  
+env:
+  RUNTIME_VERSION: 17
+
 jobs:
   build:
+    if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
     strategy:
       matrix:
-        java: [16]
-        os: [ubuntu-20.04]
+        os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk ${{ matrix.java }}
+      - name: setup jdk ${{ env.RUNTIME_VERSION }}
         uses: actions/setup-java@v2
         with:
-          distribution: adopt
-          java-version: ${{ matrix.java }}
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
-      - name: build
-        run: ./gradlew build
+          distribution: temurin
+          java-version: ${{ env.RUNTIME_VERSION }}
+      - name: run gradle build
+        uses: gradle/gradle-build-action@v2
+        with:
+          cache-read-only: ${{ !startsWith(github.ref, 'refs/heads/mc/') || github.event_name == 'pull_request' }}
+          arguments: build
       - name: capture build artifacts
+        if: ${{ runner.os == 'Linux' }}
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
