--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,10 +2,10 @@
 version = "1.0"
 
 [versions]
-minecraft = "1.19.4"
-fabricLoader = "0.14.17"
-fabricApi = "0.77.0+1.19.4"
-modmenu = "6.1.0-rc.4"
+minecraft = "1.20"
+fabricLoader = "0.14.21"
+fabricApi = "0.83.0+1.20"
+modmenu = "7.0.1"
 multiconnect = "1.5.10"
 quiltflower = "1.9.0"
 
@@ -16,10 +16,10 @@ fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLo
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
-worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.19.4", version = "7.2.14" }
+worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = "7.2.15" }
 
 [plugins]
 loom = { id = "fabric-loom", version = "1.2.7" }
-loomQuiltflower = { id = "io.github.juuxel.loom-quiltflower", version = "1.8.0" }
+loomQuiltflower = { id = "io.github.juuxel.loom-quiltflower", version = "1.10.0" }
 versions = { id = "com.github.ben-manes.versions", version = "0.44.0" }
-javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.1" }
+javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.2" }
