chore(deps): Bump dependency versions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,17 @@
 version = "1.0"
 
 [versions]
-indra = "3.1.1"
-minecraft = "1.20"
-fabricLoader = "0.14.21"
-fabricApi = "0.83.0+1.20"
-modmenu = "7.0.1"
+indra = "3.1.2"
+minecraft = "1.20.1"
+fabricLoader = "0.14.22"
+fabricApi = "0.87.0+1.20.1"
+modmenu = "7.2.1"
 multiconnect = "1.5.10"
-quiltflower = "1.9.0"
+vineflower = "1.9.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-parchment = { module = "org.parchmentmc.data:parchment-1.19.3", version = "2023.03.12" }
+parchment = { module = "org.parchmentmc.data:parchment-1.20.1", version = "2023.08.20" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
@@ -22,11 +22,11 @@ worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = 
 # buildtime
 
 indra-git = { module = "net.kyori:indra-git", version.ref = "indra" }
-githubApi = { module = "org.kohsuke:github-api", version = "1.314"}
+githubApi = { module = "org.kohsuke:github-api", version = "1.316"}
 
 [plugins]
-curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.0.14" }
-javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.2" }
-loom = { id = "fabric-loom", version = "1.2.7" }
-loomQuiltflower = { id = "io.github.juuxel.loom-quiltflower", version = "1.10.0" }
-versions = { id = "com.github.ben-manes.versions", version = "0.44.0" }
+curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.16" }
+javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
+loom = { id = "fabric-loom", version = "1.3.9" }
+loomVineflower = { id = "io.github.juuxel.loom-vineflower", version = "1.11.0" }
+versions = { id = "com.github.ben-manes.versions", version = "0.47.0" }
