--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [metadata]
-version = "1.0"
+format = { version = "1.1" }
 
 [versions]
 indra = "3.1.2"
@@ -19,14 +19,11 @@ modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
 worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = "7.2.15" }
 
-# buildtime
-
-indra-git = { module = "net.kyori:indra-git", version.ref = "indra" }
-githubApi = { module = "org.kohsuke:github-api", version = "1.316"}
-
 [plugins]
 curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.16" }
+indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
 loom = { id = "fabric-loom", version = "1.3.9" }
 loomVineflower = { id = "io.github.juuxel.loom-vineflower", version = "1.11.0" }
+publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
 versions = { id = "com.github.ben-manes.versions", version = "0.47.0" }
