--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,17 @@
 format = { version = "1.1" }
 
 [versions]
-indra = "3.1.2"
-minecraft = "1.20.1"
+indra = "3.1.3"
+minecraft = "1.20.2"
 fabricLoader = "0.14.22"
-fabricApi = "0.87.0+1.20.1"
-modmenu = "7.2.1"
+fabricApi = "0.89.2+1.20.2"
+modmenu = "8.0.0-beta.2"
 multiconnect = "1.5.10"
-vineflower = "1.9.2"
+vineflower = "1.9.3"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-parchment = { module = "org.parchmentmc.data:parchment-1.20.1", version = "2023.08.20" }
+parchment = { module = "org.parchmentmc.data:parchment-1.20.1", version = "2023.09.03" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
