--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ fabricLoader = "0.14.22"
 fabricApi = "0.89.2+1.20.2"
 modmenu = "8.0.0-beta.2"
 multiconnect = "1.5.10"
+viafabricplus = "2.9.0"
 vineflower = "1.9.3"
 
 [libraries]
@@ -17,6 +18,7 @@ fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLo
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
+viafabricplus-api = { module = "de.florianmichael:viafabricplus", version.ref = "viafabricplus" }
 worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = "7.2.15" }
 
 [plugins]
