--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,13 +19,13 @@ fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fab
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
 viafabricplus-api = { module = "de.florianmichael:viafabricplus", version.ref = "viafabricplus" }
+vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
 worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = "7.2.15" }
 
 [plugins]
 curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.16" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
-loom = { id = "fabric-loom", version = "1.3.9" }
-loomVineflower = { id = "io.github.juuxel.loom-vineflower", version = "1.11.0" }
+loom = { id = "fabric-loom", version = "1.4.1" }
 publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
 versions = { id = "com.github.ben-manes.versions", version = "0.47.0" }
