--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,28 +4,28 @@ format = { version = "1.1" }
 [versions]
 indra = "3.1.3"
 minecraft = "1.20.2"
-fabricLoader = "0.14.22"
-fabricApi = "0.89.2+1.20.2"
-modmenu = "8.0.0-beta.2"
+fabricLoader = "0.14.24"
+fabricApi = "0.90.7+1.20.2"
+modmenu = "8.0.0"
 multiconnect = "1.5.10"
 viafabricplus = "2.9.0"
 vineflower = "1.9.3"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-parchment = { module = "org.parchmentmc.data:parchment-1.20.1", version = "2023.09.03" }
+parchment = { module = "org.parchmentmc.data:parchment-1.20.2", version = "2023.10.22" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
 viafabricplus-api = { module = "de.florianmichael:viafabricplus", version.ref = "viafabricplus" }
 vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
-worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20", version = "7.2.15" }
+worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20.2", version = "7.2.17" }
 
 [plugins]
-curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.16" }
+curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.17" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
-loom = { id = "fabric-loom", version = "1.4.1" }
+loom = { id = "fabric-loom", version = "1.4.4" }
 publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
-versions = { id = "com.github.ben-manes.versions", version = "0.47.0" }
+versions = { id = "com.github.ben-manes.versions", version = "0.50.0" }
