--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,10 @@ format = { version = "1.1" }
 
 [versions]
 indra = "3.1.3"
-minecraft = "1.20.2"
-fabricLoader = "0.14.24"
-fabricApi = "0.90.7+1.20.2"
-modmenu = "8.0.0"
+minecraft = "1.20.3"
+fabricLoader = "0.15.0"
+fabricApi = "0.91.1+1.20.3"
+modmenu = "9.0.0-pre.1"
 multiconnect = "1.5.10"
 viafabricplus = "2.9.0"
 vineflower = "1.9.3"
