--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,5 +27,6 @@ curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.17" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
 loom = { id = "fabric-loom", version = "1.4.4" }
+minotaur = { id = "com.modrinth.minotaur", version = "2.8.7" }
 publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
 versions = { id = "com.github.ben-manes.versions", version = "0.50.0" }
