--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,8 +25,10 @@ worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20.2", version 
 [plugins]
 curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.17" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
+indra-spotlessLicenser = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
 javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
 loom = { id = "fabric-loom", version = "1.4.4" }
 minotaur = { id = "com.modrinth.minotaur", version = "2.8.7" }
 publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
+spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
 versions = { id = "com.github.ben-manes.versions", version = "0.50.0" }
