--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,32 +3,31 @@ format = { version = "1.1" }
 
 [versions]
 indra = "3.1.3"
-minecraft = "1.20.3"
-fabricLoader = "0.15.0"
-fabricApi = "0.91.1+1.20.3"
-modmenu = "9.0.0-pre.1"
-multiconnect = "1.5.10"
-viafabricplus = "2.9.0"
-vineflower = "1.9.3"
+minecraft = "1.20.6"
+fabricLoader = "0.15.11"
+fabricApi = "0.98.0+1.20.6"
+modmenu = "10.0.0-beta.1"
+viafabricplus = "3.3.0"
+vineflower = "1.10.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-parchment = { module = "org.parchmentmc.data:parchment-1.20.2", version = "2023.10.22" }
+parchment = { module = "org.parchmentmc.data:parchment-1.20.6", version = "2024.05.01" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
-multiconnect-api = { module = "net.earthcomputer.multiconnect:multiconnect-api", version.ref = "multiconnect" }
-viafabricplus-api = { module = "de.florianmichael:viafabricplus", version.ref = "viafabricplus" }
+viafabricplus-api = { module = "de.florianmichael:ViaFabricPlus", version.ref = "viafabricplus" }
+viaversion = { module = "com.viaversion:viaversion-common", version = "5.0.0-SNAPSHOT" }
 vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
-worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20.2", version = "7.2.17" }
+worldedit = { module = "com.sk89q.worldedit:worldedit-fabric-mc1.20.6", version = "7.3.1" }
 
 [plugins]
-curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.17" }
+curseForgeGradle = { id = "net.darkhax.curseforgegradle", version = "1.1.18" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 indra-spotlessLicenser = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
-javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.3.1" }
-loom = { id = "fabric-loom", version = "1.4.4" }
+javaEcosystemCapabilities = { id = "org.gradlex.java-ecosystem-capabilities", version = "1.5.2" }
+loom = { id = "fabric-loom", version = "1.6.11" }
 minotaur = { id = "com.modrinth.minotaur", version = "2.8.7" }
 publishGithubRelease = { id = "ca.stellardrift.publish-github-release", version = "0.1.0" }
 spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
-versions = { id = "com.github.ben-manes.versions", version = "0.50.0" }
+versions = { id = "com.github.ben-manes.versions", version = "0.51.0" }
