--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,10 @@ format = { version = "1.1" }
 
 [versions]
 indra = "3.1.3"
-minecraft = "1.21.1"
+minecraft = "1.21.2-rc1"
 fabricLoader = "0.16.7"
-fabricApi = "0.106.0+1.21.1"
-modmenu = "11.0.1"
+fabricApi = "0.106.0+1.21.2"
+modmenu = "12.0.0-beta.1"
 viafabricplus = "3.3.0"
 vineflower = "1.10.1"
 
