--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           distribution: temurin
           java-version: ${{ env.RUNTIME_VERSION }}
       - name: setup / gradle
-        uses: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
         with:
           cache-read-only: ${{ !(startsWith(github.ref, 'refs/heads/mc/') || github.ref == 'refs/heads/master') || github.event_name == 'pull_request' }}
       - name: run gradle build
@@ -40,4 +40,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
-          path: build/libs/
+          path: build/
